# desktop-control-system

./: .gitignore  README.md  dcs.spec  pyproject.toml  sandbox_ctl.py  test_primitives.py
.github/workflows/: release.yml
agent/: __init__.py  __main__.py  cdcs_agent.py  keyboard.py  mouse.py  screenshot.py
demo-video/: package.json  pnpm-lock.yaml
demo-video/src/: CdcsDemo.tsx  Root.tsx
host/: __init__.py  config.py  desktop_sandbox.py  pipe_client.py  preview.py
skill/: SKILL.md
tests/: test_integration.py  test_parallel.py
